# study_opengl

./: --GenerateBinaries.bat  --GenerateBuildProject.bat  --PackProgram.bat  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LOG.md  NOTEBOOK.md  README.md  TIMELOG.md  _GenerateBinaries.bat  _GenerateBuildProject.bat  _PackProgram.bat
.github/workflows/: cmake-platform-windows.yml  cmake-single-platform.yml
LearnOpenGL/: LearnOpenGL.sln  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  basic.h  hello_world.cpp  imgui.ini  main.cpp  study_opengl.sln
LearnOpenGL/config/: config.xml  config.yaml  shader_mappings.yaml
LearnOpenGL/config/examples/: config.json
LearnOpenGL/data/: d_objToDraw.cpp  m_shaders.cpp
LearnOpenGL/data/maps/: shader_paths.cpp
LearnOpenGL/data/scenes/: 0_phong_scene.cpp  1_lightmap_scene.cpp  2.0_multiplelights_scene.cpp  2.3_importmodel_scene.cpp  2_lightcaster_scene.cpp  3.0_testobjects_scene.cpp  3_multiplelights_scene.cpp  4_importmodel_scene.cpp  draw_obj.cpp  scenes.cpp
LearnOpenGL/enc_temp_folder/bb4df9a7a8be109ee8a37819653ec9fa/: vector.h
LearnOpenGL/headers/: basic.h  openGL.h  utilities.h
LearnOpenGL/shaders/: 2.3.multiplelights_lit_frag_shader.glsl  3.1.stenciltesting_frag_shader.glsl  3.1.stenciltesting_vrtx_shader.glsl  3d_fragShader.glsl  3d_frag_shader.glsl  3d_vrtxShader.glsl  3d_vrtx_shader.glsl  fragShader.glsl  fragShader_1.glsl  fragShader_2.glsl  light_fragShader.glsl  light_vrtxShader.glsl  lightcaster-spot_lit_frag_shader.glsl  lit_fragShader.glsl  lit_vrtxShader.glsl  phong_lit_frag_shader.glsl  phong_lit_vrtx_shader.glsl  vrtxShader.glsl
LearnOpenGL/source/: learnOpenGL.cpp  main.cpp  t_test.cpp  test.cpp  util_shaders.cpp  utilities.cpp
_documentation/: cli_commands.md  log.md  naming_convention_rules.md  notebook.md  standards.md  timelog.md
_documentation/debugging/: 20240227_uboproblem.md  20241006_cmake-errors.md  20241130_normal_map.md  20250305_eksikler.md
_documentation/implementation/: 20241030_shadows.md  20241107_point-shadows.md  20250112_bloom.md  20250121_ui-improvements.md  20250224_deferred-shading.md
_documentation/progress/: 20240310-bug-geoshader.md  20240331-opt-instancing_monitor.md  20240412-bug-facecullinghatasi.md  20240703-bug-blending_sahnesi.md  20241028-bug-vqengine_report.md  20241030-imp_shadows.md  20241107-imp-point_shadows.md  20241130-bug-normal_map.md  20241208-imp-parallax.md  20241221-imp-hdr.md  20250112_imp-bloom.md  20250117-bug-c_array_memory_corrupt.md  20250305-fix-eksikler.md  20250305-fixref-eksikler.md  20250307-imp-ssao.md
config/: config.yaml  yamltest.yaml
data/_maps/: predef3d_namemap.cpp  texture_name-pathmap.cpp
data/_paths/: model_paths.cpp  shader_paths.cpp
data/_predefs/: predef_materials.cpp  predef_primitive_scene_nodes.cpp  predef_scene_lights.cpp  predef_vertex_data.cpp
data/_scenes/: 1.0_testscene.cpp  2.0_multiplelights_testscene.cpp  2.3_importmodel_testscene.cpp  3.0_outliner_testscene.cpp  3.10.instancing_testscene.cpp  3.11.antialiasing_testscene.cpp  3.2_blending_testscene.cpp  3.3_faceculling_testscene.cpp  3.4_framebuffers_testscene.cpp  3.5_cubemap_testscene.cpp  3.8_advglsl_testscene.cpp  3.9_geoshader_testscene.cpp  4.1.blinnphong_testscene.cpp  4.10_ssao_testscene.cpp  4.2_gammacorrection_testscene.cpp  4.3_shadows_testscene.cpp  4.4_point-shadows_testscene.cpp  4.5_normal-map_testscene.cpp  4.6_parallax_testscene.cpp  4.7_hdr_testscene.cpp  4.8_bloom_testscene.cpp  4.9_deferred-shading_testscene.cpp
headers/abstract/: application.h  light.h  mesh.h  model.h  queue.h  renderer.h  scene.h  scene_state.h  shader.h  vector3.h  vector4.h
headers/core/: opengl.h
headers/data/: data.h  scenes.h  shader_data.h
headers/events/: events.h
headers/test/: unit_tests.h
headers/utils/: light_yaml_parser.hpp  utilities.h
libs/stb/: stb_image_write.h
opengl_renderer/: imgui.ini  opengl_renderer.filters  opengl_renderer.sln  opengl_renderer.vcxproj
opengl_renderer/config/: config.yaml  shader_mappings.yaml
opengl_renderer/source/: main.cpp
scripts/: check_naming_conventions.py  gen_renamed_list.py  get_file_names.py  refactor.py  rename_file_names.py  rename_from_input.py
shaders/: 1.0-3d-frag.glsl  1.0.3d_frag_shader.glsl  1.0.3d_vrtx_shader.glsl  1.1.axis-x_frag_shader.glsl  1.1.axis-x_vrtx_shader.glsl  1.1.axis-z_frag_shader.glsl  1.2-diffuse-vrtx.glsl  1.2.diffuse_frag_shader.glsl  1.3-green-vrtx.glsl  1.3.green_frag_shader.glsl  2.0.phong_lit_frag_shader.glsl  2.0.phong_lit_vrtx_shader.glsl  2.2-lightcaster_directional_lit-frag.glsl  2.2-lightcaster_point_lit-frag.glsl  2.3.multiplelights_lit_frag_shader.glsl  2.3.multiplelights_lit_vrtx_shader.glsl  3.0.depthtesting_lit_frag_shader.glsl  3.1.stenciltesting_frag_shader.glsl  3.1.stenciltesting_vrtx_shader.glsl  3.10.instance02_vrtx_shader.glsl  3.10.instance_vrtx_shader.glsl  3.2.blending_vrtx_shader.glsl  3.4-framebuffer-frag.glsl  3.4.framebuffer_frag_shader.glsl  3.5-cubemap-vrtx.glsl  3.6.cubemaplit_frag_shader.glsl  3.8-advglsl_red-frag.glsl  3.8.advglsl-blue_frag_shader.glsl  3.8.advglsl-green_frag_shader.glsl  3.8.advglsl-red_vrtx_shader.glsl  3.9-explode-frag.glsl  3.9-geo.glsl  3.9-normal-geo.glsl  3.9.axes_vrtx_shader.glsl  3.9.explode_geo_shader.glsl  3.9.explode_vrtx_shader.glsl  3.9.geo_frag_shader.glsl  3.9.geo_vrtx_shader.glsl  3.9.normal_vrtx_shader.glsl  4.1-blinnphong-frag.glsl  (+36 more)
shaders/old/: v1.2_fragShader.glsl  v1.2_vrtxShader.glsl
shaders/post_process/: gaussian-blur_frag_shader.glsl  gaussian-blur_vrtx_shader.glsl
source/: main.cpp
source/blackboard/: blackboard.cpp
source/core/: application.cpp  renderer.cpp  ui.cpp
source/data/: geometry.cpp
source/event_handling/: input_speaker.cpp  ui_events.cpp  window_events.cpp
source/libs/: asset_import.cpp
source/scene/: camera.cpp  scene.cpp
source/test/: btest_hello_world.cpp  btest_test.cpp  itest_transformations.cpp  utest_transform.cpp  utest_vector4.cpp
source/utils/: image_utils.cpp  matrix_utils.cpp  self_utils.cpp  shader_utils.cpp  vector_utils.cpp
(+195 files in other folders)
